<resources>
    <string name="app_name">Trackie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Current Privileges</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_settings">Settings</string>

    <string name="map_mode">Map Mode</string>
    <string name="confirm_mapping_location">Confirm Location</string>
    <string name="scanning_wifi_data">Scanning WiFi Data...</string>
    <string name="times_scanned">Times Scanned</string>
    <string name="delete">Delete</string>
    <string name="view_data">View Data</string>
    <string name="end_mapping">End Mapping</string>
    <string name="collected_data">Collected Data:</string>
    <string name="move_5_meters_guide">Move about 5 metres away</string>
    <string name="mapping_complete">Mapping Complete!</string>
    <string name="uploading_to_database">Uploading to Database...</string>
    <string name="show_results">Show Results</string>
    <string name="return_home">Return Home</string>

    <string name="pin_location">Pin Location</string>
    <string name="bssids_count">BSSIDs Count</string>


    <string name="test_mode">Test Mode</string>
    <string name="end_testing">End Testing</string>
    <string name="testing_complete">Testing Complete!</string>
    <string name="time_taken">Time Taken:</string>
    <string name="overall_accuracy">Overall Testing Accuracy</string>
    <string name="indicated_error_points">indicated error points</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="upload_floorplan_here">Upload floorplan</string>
    <string name="confirm_floorplan">Confirm Floorplan</string>
    <string name="data_upload_success">Data upload success!</string>
    <string name="no_data">No data to upload!</string>
    <string name="credentials_key">Credentials Key</string>
</resources>