<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_map_24px"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_my_location_24px"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24px"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/common_full_open_on_phone"
            android:title="Database"/>
    </group>
</menu>