<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.trackie.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/nav_locations"
        android:name="com.example.trackie.ui.locations.LocationsFragment"
        android:label="@string/menu_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.trackie.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/databaseTestFragment"
        android:name="com.example.trackie.ui.databasetest.DatabaseTestFragment"
        android:label="DatabaseTestFragment"
        tools:layout="@layout/fragment_databasetest"/>

</navigation>