<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.mapmode.MapModeFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_location_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="42dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/confirm_mapping_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/collected_data_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/collected_data"
        android:textAlignment="center"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintBottom_toTopOf="@+id/confirm_location_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/move_5_meter_alert_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/move_5_meters_guide"
        android:textAlignment="center"
        android:textSize="@dimen/alert_text_size"
        android:textColor="@color/darkred"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>